missing style files

--- a/tclserv/doc/slides/tclserv.tex
+++ b/tclserv/doc/slides/tclserv.tex
@@ -21,6 +21,9 @@
 \begin{document}
 \maketitle
 
+\def\figurepath{./:./fig}
+\graphicspath{{./:./fig/}}
+
 % =======================================================================
 
 \begin{part}{Introduction}{}
@@ -57,7 +60,7 @@
 
 \begin{part}{tclServ}{Architecture}
    \vfill
-   \docfig[width=0.9\linewidth,psfrag]{tclServ.fig}
+   \docfig[width=0.9\linewidth,psfrag]{fig/tclServ.fig}
    \vfill
 \end{part}
 
