--- a/tclserv/doc/slides/cartouche.sty
+++ b/tclserv/doc/slides/cartouche.sty
@@ -1,12 +1,5 @@
-%%
-%% Copyright (C) 2002 LAAS/CNRS 
-%%
-%% $Id$
-%%
-
-% cartouche environmnent: draw rectangle w/rounded corners around argument
-\RequirePackage{calc}
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% \cartouche: draw rectangle w/rounded corners around argument
 \font\circfont=lcircle10
 \newdimen\circthick
 \newdimen\cartouter\newdimen\cartinner
@@ -26,26 +19,18 @@
 %
 \newskip\lskip\newskip\rskip
 \newlength\normtopsep
-
-%\@listdepth=0
-
+ 
 \long\def\cartouche{
 \begingroup
-        % Marge gauche depend de l'indentation
-	\setlength{\lskip}{\leftmargin*\@listdepth}
-        \rskip=\marginparsep
+
+        \lskip=\leftskip \rskip=\rightskip
 	\normtopsep=\topsep
 	\topsep=0pt
         \leftskip=10pt\rightskip=10pt %we want these *outside*.
         \cartinner=\hsize \advance\cartinner by-\lskip 
                           \advance\cartinner by-\rskip
-                          \advance\cartinner by-7pt % Bon, beh on recale
-%                                                     la ligne verticale
-%                                                     droite ...
-%                                                     (pas joli ...)
         \cartouter=\hsize
-	% longeur des lignes horizontales : 
-        \advance\cartouter by 21pt % allow for 3pt kerns on either
+        \advance\cartouter by 28pt % allow for 3pt kerns on either
 %                                    side, and for 6pt waste from
 %                                    each corner char
 %                                marge totale: 18pt -> 28pt 
@@ -56,21 +41,20 @@
                 \hbox\bgroup
                         \hskip\lskip
                         \vrule\kern13pt % marge gauche: 3pt -> 13pt
-                        \kern-\lskip % on supprime l'indentation suppl
-%                                      pour le texte (qui a sa propre indent.)
                         \vbox\bgroup
                                 \hsize=\cartinner
-                                \kern3pt % marge en haut
+                                \kern3pt
                                 \begingroup
                                         \baselineskip=\normbskip
                                         \lineskip=\normlskip
                                         \parskip=\normpskip
+                                        \parskip=-10pt  %% sara : pour slides,
+% suprime du blanc entre haut catouche et debut texte
                                         \vskip -\parskip
 \def\endcartouche{%
                                 \endgroup%
                                 \kern3pt
                         \egroup%
-                        \kern\lskip % on rajoute l'indentation suppl.
                         \kern3pt\vrule%
                         \hskip\rskip%
                 \egroup%
@@ -81,9 +65,6 @@
 }}
  
 
-
-
-%-----------------------------------------------------------------------
 % Seulement le haut de la cartouche
 \long\def\cartHaut{
 
@@ -167,3 +148,4 @@
 	\topsep=\normtopsep
 \endgroup
 }}
+ 
