--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 $LAAS$
 
+ 59. Removed VxWorks support.
  58. Don't initialize pocolibs timers if there is no periodic task.
  57. Search for includes in local directories before any other
      directory so that wrong header files from a previous installation
