Does not generate stethoscope files any more. 2 new module functionnalities using "abort" request with special parameter:   . with parameter -77: switch on/off the display of time performances of the codels   . with parameter -66: switch on/off verbose mode (printed with macro GENOM_VERBOSE) 3 new macros to print messages:   . GENOM_VERBOSE(fmt, args...): print iff verbose mode is on (see above)   . GENOM_PRINT(fmt, args...):  print with func name, line and file informations   . GENOM_PRINT_REPORT(report): print the report string New procedures verbose and showtime in tclserv.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 $LAAS$
  
+ 68. Abort request allows to switch on/off verbose mode (parameter -66) 
+     and to display time performances of the codels (-77). Corresponding 
+     procedures 'verbose' and 'showtime' have been added in tclserv.
+ 67. Does not generate stethoscope files any more
  66. Disconnect from tcl servers that die (this prevent eating 100% cpu
      trying to read a closed socket).
  65. Add a "unlm" request in tcl clients that disconnects from a module
