--- a/tclserv/doc/slides/tclserv.tex
+++ b/tclserv/doc/slides/tclserv.tex
@@ -1,6 +1,6 @@
 %%
 %% Anthony Mallet - Fri Dec  6 2002
-%% Copyright (C) 2002 LAAS/CNRS 
+%% Copyright (C) 2002-2007 LAAS/CNRS 
 %%
 %% $Id$
 %%
@@ -13,7 +13,7 @@
 
 \context{\vfill}
 \title{\Huge tclServ}
-\author{Anthony Mallet}
+\author{Anthony Mallet, Sara Fleury}
 \date{march 2007}
 
 \newcommand{\tclex}[2]{\texttt{#1}\\$\rightarrow$ \texttt{#2}}
