--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 $LAAS$
  
+ 69. 'make regen' also 'make depend' to detect new dependencies.
  68. Abort request allows to switch on/off verbose mode (parameter -66) 
      and to display time performances of the codels (-77). Corresponding 
      procedures 'verbose' and 'showtime' have been added in tclserv.
